2011-01-20  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* image/imshow.m: Fix handling of clim and display_range so that
	images are more faithfully reproduced.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* scripts/image/imshow.m, scripts/image/saveimage.m,
	scripts/io/dlmwrite.m, scripts/io/strread.m,
	scripts/miscellaneous/license.m, scripts/optimization/glpk.m,
	scripts/plot/refreshdata.m, scripts/plot/shading.m,
	scripts/plot/slice.m, scripts/plot/surfl.m, scripts/plot/uimenu.m,
	scripts/statistics/base/mean.m, scripts/statistics/base/moment.m,
	scripts/strings/isstrprop.m: Prevent doubled quotes around @table
	items in Info.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* mkdoc: Mark all scripts as coming from 'scripts/' directory
	in Texinfo '@c func location' comments.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* scripts/linear-algebra/condest.m, 
	scripts/linear-algebra/onenormest.m, scripts/linear-algebra/qzhess.m,
	scripts/polynomial/polyfit.m, scripts/special-matrix/pascal.m: Use 
	non-breaking spaces between certain adjectives and their linked nouns
	in docstrings

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* image/imread.m, image/imwrite.m, signal/periodogram.m,
	strings/isstrprop.m: Use @nospell macro on certain words in docstring.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* @ftp/loadobj.m, @ftp/saveobj.m, audio/record.m,
	general/accumarray.m, general/accumdim.m, general/arrayfun.m,
	general/bicubic.m, general/curl.m, general/divergence.m,
	general/gradient.m, general/interp2.m, general/rat.m,
	image/imagesc.m, io/strread.m, io/textscan.m,
	linear-algebra/krylov.m, miscellaneous/getappdata.m,
	miscellaneous/isappdata.m, miscellaneous/rmappdata.m,
	miscellaneous/setappdata.m, miscellaneous/what.m,
	optimization/qp.m, path/savepath.m, pkg/pkg.m,
	plot/__fltk_print__.m, plot/__gnuplot_print__.m,
	plot/__go_draw_axes__.m, plot/__print_parse_opts__.m,
	plot/axis.m, plot/caxis.m, plot/cla.m, plot/clabel.m,