@@ -1,3 +1,9 @@
+2011-01-21  Konstantinos Poulios  <logari81@googlemail.com>
+
+	* src/graphics.cc (axes::properties::set_xlabel,
+	axes::properties::set_ylabel, axes::properties::set_zlabel):
+	Setting axis label color from axis color.
+
 2011-01-20  Rik  <octave@nomad.inbox5.com>
 
 	* src/file-io.cc, src/variables.cc: Prevent doubled quotes around @table
